frs-platform-core/main/default/objects/Dead_Letter__c/Dead_Letter__c.object-meta.xml
<CustomObject>
    <description>Exhausted-retry / failed-publish capture for the platform integration framework. A row = an outbound call (or event publish) that failed all attempts; replay re-drives it.</description>
    <label>Dead Letter</label>
    <pluralLabel>Dead Letters</pluralLabel>
    <nameField>
        <label>Dead Letter Name</label>
        <type>AutoNumber</type>
        <displayFormat>DL-{00000000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>