frs-platform-core/main/default/objects/Dead_Letter__c/fields/Attempts__c.field-meta.xml
<CustomField>
    <fullName>Attempts__c</fullName>
    <label>Attempts</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>