frs-platform-core/main/default/objects/Dead_Letter__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <label>Correlation Id</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
</CustomField>