frs-platform-core/main/default/objects/Dead_Letter__c/fields/Endpoint_Alias__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Alias__c</fullName>
    <label>Endpoint Alias</label>
    <type>Text</type>
    <length>255</length>
</CustomField>