frs-platform-core/main/default/objects/Dead_Letter__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Redacted final error summary.</description>
</CustomField>