frs-platform-core/main/default/objects/Dead_Letter__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Redacted request body, so replay can re-send. Never store raw secrets/PII (Logger.redact applied).</description>
</CustomField>