frs-platform-core/main/default/objects/Dead_Letter__c/fields/Replay_Count__c.field-meta.xml
<CustomField>
    <fullName>Replay_Count__c</fullName>
    <label>Replay Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>